--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 my_keys.py
-magistral.py
 __pycache__/
 *.pyc
 *.pyo
 __pycache__/
 .vscode/
 .DS_Store
-example_pages/
-gradio_instance.ipynb
-poetry.lock
-pyproject.toml
+*.pdf
+
+
